# blabbermouth

./: pyproject.toml
backend/blabbermouth_llm/: base_models.py  llm_helper.py
backend/transcribe/: dg_transcribe.py  st_transcribe.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: assistant.ts  globals.css  index.css  page.tsx
frontend/app/competions-commands/: CompletionsCommandsAssistant.ts  completions-prompt.ts  functions.ts  getUserMessage.ts  groq.tsx  transcript.txt
frontend/app/components/: spinner.tsx  user-prompt.tsx
frontend/public/: completions-prompt.md
